[gd_scene load_steps=10 format=3 uid="uid://b2hv3xnb0xskd"]

[ext_resource type="Script" path="res://Scenes/ColorRect.gd" id="1_pdoa0"]
[ext_resource type="Script" path="res://Scenes/loadingScreen.gd" id="1_yrj58"]
[ext_resource type="FontFile" uid="uid://dl4um7ynrmw5m" path="res://helvetica-255/helvetica-rounded-bold-5871d05ead8de.otf" id="2_3yja7"]
[ext_resource type="Script" path="res://Scenes/LoadingBar.gd" id="3_lhqv6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2s6bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iyidn"]
bg_color = Color(0, 0.223529, 0.65098, 1)

[sub_resource type="Animation" id="Animation_ogpy3"]
length = 55.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect/VBoxContainer/HBoxContainer/LoadingBar:theme_override_styles/fill:bg_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 5, 10.1, 15.1, 20, 25, 30, 35, 40, 45, 49.9, 55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0.223529, 0.65098, 1), Color(1, 0.388235, 0.0980392, 1), Color(0.423529, 0.745098, 0.270588, 1), Color(0.654902, 0.662745, 0.67451, 1), Color(0.6, 0.4, 0.2, 1), Color(0.988235, 0.8, 0.0392157, 1), Color(0.933333, 0.207843, 0.180392, 1), Color(0, 0.576471, 0.235294, 1), Color(0.72549, 0.2, 0.678431, 1), Color(0, 0.678431, 0.815686, 1), Color(0.501961, 0.505882, 0.513726, 1), Color(0, 0.223529, 0.65098, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect/VBoxContainer/HBoxContainer/LoadingBar:theme_override_styles/background")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_hqb10"]
resource_name = "closing_animation"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tokhx"]
_data = {
"RESET": SubResource("Animation_ogpy3"),
"closing_animation": SubResource("Animation_hqb10")
}

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yrj58")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pdoa0")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(152, 450)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LoadingBar" type="ProgressBar" parent="ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(2000, 100)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3yja7")
theme_override_font_sizes/font_size = 111
theme_override_styles/background = SubResource("StyleBoxFlat_2s6bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_iyidn")
value = 10.0
show_percentage = false
script = ExtResource("3_lhqv6")

[node name="Control2" type="Control" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(1.24, 51.25)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_3yja7")
theme_override_font_sizes/font_size = 116
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="closingTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tokhx")
}

[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer/LoadingBar" to="." method="_on_loading_bar_value_changed"]
[connection signal="timeout" from="closingTimer" to="." method="_on_closing_timer_timeout"]
